| Summary: | ASTERISK-28618: bridge_softmix: hold not cleared when joining a softmix bridge | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2019-11-13 17:25:57.000-0600 | Date Closed: | 2019-11-18 09:15:25.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Bridges/bridge_softmix |
| Versions: | 13.29.1 GIT 16.6.1 17.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | MOH continues to play to a channel if that channel was on hold prior to entering a softmix bridge. MOH will not stop even if the original "holder" attempts an unhold.
Replicate: Using ARI create, and add two channels to a mixing bridge. Then initiate a hold from one of the endpoints. Now add a third channel to the bridge. Upon adding the third channel the bridge tech will transition to softmix. MOH can still be heard. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2019-11-18 09:15:26.468-0600 Change 13202 merged by Friendly Automation: bridge_softmix: clear hold when joining a softmix bridge [https://gerrit.asterisk.org/c/asterisk/+/13202|https://gerrit.asterisk.org/c/asterisk/+/13202] By: Friendly Automation (friendly-automation) 2019-11-18 10:40:03.973-0600 Change 13203 merged by Friendly Automation: bridge_softmix: clear hold when joining a softmix bridge [https://gerrit.asterisk.org/c/asterisk/+/13203|https://gerrit.asterisk.org/c/asterisk/+/13203] By: Friendly Automation (friendly-automation) 2019-11-18 10:40:51.163-0600 Change 13204 merged by Friendly Automation: bridge_softmix: clear hold when joining a softmix bridge [https://gerrit.asterisk.org/c/asterisk/+/13204|https://gerrit.asterisk.org/c/asterisk/+/13204] By: Friendly Automation (friendly-automation) 2019-11-18 11:52:18.058-0600 Change 13176 merged by George Joseph: bridge_softmix: clear hold when joining a softmix bridge [https://gerrit.asterisk.org/c/asterisk/+/13176|https://gerrit.asterisk.org/c/asterisk/+/13176] | ||